Setup Schedular for every 1 minute (*/1 * * * *)

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -4,3 +4,8 @@ production:
   :concurrency: 1
 :queues:
   - default
+:schedule:
+  FetchLatestCrptoPricesJob:
+    cron: '*/1 * * * *'
+    queue: default
+    enabled: true
